# gitit

./: .gitignore  .gitmodules  .hgignore  .mailmap  .travis.yml  CHANGES  CopyAssets.hs  Curry-Howard-Lambek Correspondence.page  FrontPage  Gitit.hs  HCAR-gitit.tex  Help  Makefile  Paths_gitit.hs  README.markdown  README.md  RELANN-0.6.1  TODO  YUI-LICENSE  cabal.project  commit.cpp  commit.h  configure.cpp  configure.h  configure.ui  currentuserinfo.cpp  currentuserinfo.h  existingProjectWizard.cpp  existingProjectWizard.h  expireGititCache.hs  gitchangedstatusmodel.cpp  gitchangedstatusmodel.h  gitcommand.cpp  gitcommand.h  gitit  gitit.cabal  gitit.hs  gitit.icns  gitit.pro  gitstagedstatusmodel.cpp  (+34 more)
.github/workflows/: ci.yml  create-assets.yml
Gitit/: Authentication.hs  Config.hs  ContentTransformer.hs  Convert.hs  CookieFixer.hs  Export.hs  Framework.hs  Git.hs  HAppS.hs  HStringTemplate.hs  Handlers.hs  Happstack.hs  Initialize.hs  Interface.hs  Layout.hs  MimeTypes.hs  Page.hs  Plugins.hs  Server.hs  Shell.hs  State.hs  Types.hs  Util.hs
Network/: Gitit.hs
Network/Gitit/: Authentication.hs  Cache.hs  Config.hs  ContentTransformer.hs  ContentTransformer.hs-boot  Export.hs  Feed.hs  Framework.hs  Handlers.hs  Initialize.hs  Interface.hs  Layout.hs  Page.hs  Plugins.hs  Rpxnow.hs  Server.hs  State.hs  Types.hs  Util.hs
Network/Gitit/Authentication/: Github.hs
Network/Gitit/Compat/: Except.hs
Network/Gitit/Plugin/: External.hs
_layouts/: default.html
css/: ie.css  print.css  screen.css
data/: CapitalizeEmphasisPlugin.hs  DotPlugin.hs  FrontPage.page  Help.page  SampleConfig.hs  autolink.st  default.conf  markup.DocBook  markup.HTML  markup.LaTeX  markup.Markdown  markup.Org  markup.RST  markup.Textile  markup.docbook  markup.markdown  markup.rst  post-update  template.html
data/markupHelp/: HTML  LaTeX  LaTeX+LHS  Markdown  Markdown+LHS  Org  RST  RST+LHS  html  latex  markdown  markdown+lhs  rst+lhs
data/static/: robots.txt
data/static/css/: base-min.css  custom.css  highlighting.css  hk-pyg.css  print.css  reset-fonts-grids.css  screen.css
data/static/js/: MathMLinHTML.js  autolink.js  dragdiff.js  footnotes.js  gitit-bootstrap.js  jquery-ui-combined-1.6rc2.min.js  preview.js  search.js  uploadForm.js
data/templates/: autolink.st  content.st  expire.st  footer.st  getuser.st  listitem.st  logo.st  markuphelp.st  messages.st  page.st  pagetools.st  sitenav.st  userbox.st
images/: gitit.icns
javascripts/: folding.js  search.js
js/: jquery-ui.packed.js  preview.js
plugins/: BashExample.hs  CapitalizeEmphasis.hs  CapitalizeEmphasisPlugin.hs  CapitalizeOption.hs  CapitalizePlugin.hs  Csv.hs  Deprofanizer.hs  DeprofanizerPlugin.hs  Dot.hs  DotPlugin.hs  Files.hs  ImgTex.hs  ImgTexPlugin.hs  Interwiki.hs  InterwikiPlugin.hs  MTable.hs  PageFormat.hs  PageFormatPlugin.hs  PerlExample.hs  PigLatin.hs  PlantUML.hs  PythonExample.hs  RExample.hs  ShowUser.hs  ShowUserPlugin.hs  Signature.hs  SignaturePlugin.hs  Subst.hs  TexMath.hs  WebArchiver.hs  WebArchiverBot.hs  bashexample.sh  perlexample.pl  pythonexample.py  rexample.R
src/Network/: Gitit.hs
src/Network/Gitit/: Authentication.hs  Cache.hs  Config.hs  ContentTransformer.hs  Export.hs  Feed.hs  Framework.hs  Handlers.hs  Initialize.hs  Layout.hs  Page.hs  Plugins.hs  Rpxnow.hs  Server.hs  State.hs  Types.hs  Util.hs
src/Network/Gitit/Authentication/: Github.hs
stylesheets/: gitit.css  hk-pyg.css
