name:                gitit
version:             0.12.0.1
Cabal-version:       >= 1.8
build-type:          Simple
synopsis:            Wiki using happstack, git or darcs, and pandoc.
description:         Gitit is a wiki backed by a git, darcs, or mercurial
                     filestore.  Pages and uploaded files can be modified either
                     directly via the VCS's command-line tools or through
                     the wiki's web interface. Pandoc is used for markup
                     processing, so pages may be written in
                     (extended) markdown, reStructuredText, LaTeX, HTML,
                     or literate Haskell, and exported in ten different
                     formats, including LaTeX, ConTeXt, DocBook, RTF,
                     OpenOffice ODT, and MediaWiki markup.
                     .
                     Notable features include
                     .
                     * plugins: dynamically loaded page
                       transformations written in Haskell (see
                       "Network.Gitit.Interface")
                     .
                     * conversion of TeX math to MathML for display in
                       web browsers
                     .
                     * syntax highlighting of source code
                       files and code snippets
                     .
                     * Atom feeds (site-wide and per-page)
                     .
                     * a library, "Network.Gitit", that makes it simple
                       to include a gitit wiki in any happstack application
                     .
                     You can see a running demo at <http://gitit.net>.
                     .
                     For usage information:  @gitit --help@

category:            Network
license:             GPL
license-file:        LICENSE
author:              John MacFarlane
maintainer:          jgm@berkeley.edu
bug-reports:         http://github.com/jgm/gitit/issues
homepage:            http://gitit.net
stability:           experimental
extra-source-files:  data/static/js/jquery-1.2.6.js
                     data/static/js/jquery.hotkeys-0.7.9.js
                     data/static/js/jquery-ui.core-1.6rc2.js
                     data/static/js/jquery-ui.droppable-1.6rc2.js
                     data/static/js/jquery-ui.draggable-1.6rc2.js
                     data/static/js/jquery-ui.tabs-1.6rc2.js
data-files:          data/static/css/screen.css, data/static/css/print.css,
                     data/static/css/ie.css, data/static/css/hk-pyg.css,
                     data/static/css/reset-fonts-grids.css,
                     data/static/css/custom.css,
                     data/static/img/logo.png, data/static/img/icons/feed.png,
                     data/static/img/icons/folder.png, data/static/img/icons/page.png,
                     data/static/js/dragdiff.js, data/static/js/jquery-1.2.6.min.js,
                     data/static/js/uploadForm.js, data/static/js/jquery-ui-combined-1.6rc2.min.js,
                     data/static/js/jquery.hotkeys-0.7.9.min.js,
                     data/static/js/preview.js, data/static/js/search.js,
                     data/static/js/MathMLinHTML.js, data/static/js/footnotes.js,
                     data/static/robots.txt,
                     data/s5/default/blank.gif,
                     data/s5/default/bodybg.gif,
                     data/s5/default/framing.css,
                     data/s5/default/iepngfix.htc,
                     data/s5/default/opera.css,
                     data/s5/default/outline.css,
                     data/s5/default/pretty.css,
                     data/s5/default/print.css,
                     data/s5/default/s5-core.css,
                     data/s5/default/slides.css,
                     data/s5/default/slides.js,
                     data/s5/default/slides.min.js,
                     data/post-update, data/FrontPage.page, data/Help.page,
                     data/markup.Markdown, data/markup.RST,
                     data/markup.Textile, data/markup.Org, data/markup.DocBook,
                     data/markup.HTML, data/markup.LaTeX,
                     data/default.conf,
                     data/templates/page.st, data/templates/content.st,
                     data/templates/userbox.st, data/templates/footer.st,
                     data/templates/logo.st, data/templates/markuphelp.st,
                     data/templates/pagetools.st, data/templates/sitenav.st,
                     data/templates/messages.st, data/templates/listitem.st,
                     data/templates/expire.st, data/templates/getuser.st,
                     data/markupHelp/Markdown, data/markupHelp/Markdown+LHS,
                     data/markupHelp/RST, data/markupHelp/RST+LHS,
                     data/markupHelp/LaTeX, data/markupHelp/LaTeX+LHS,
                     data/markupHelp/HTML, data/markupHelp/Org,
                     plugins/CapitalizeEmphasis.hs,
                     plugins/PigLatin.hs,
                     plugins/Dot.hs,
                     plugins/ImgTex.hs,
                     plugins/Interwiki.hs,
                     plugins/Deprofanizer.hs,
                     plugins/WebArchiver.hs,
                     plugins/ShowUser.hs,
                     plugins/Signature.hs,
                     plugins/Subst.hs,
                     CHANGES, README.markdown, YUI-LICENSE, BLUETRIP-LICENSE, TANGOICONS

Source-repository head
  type:          git
  location:      git://github.com/jgm/gitit.git

Flag network-uri
  Description: Get Network.URI from the network-uri package
  Default: True

Flag plugins
  description:       Compile in support for plugins.  This will increase the size of
                     the executable and the memory it uses, so those who will not need
                     plugins should disable this flag.
  default:           True

Library
  hs-source-dirs:    src
  exposed-modules:   Network.Gitit, Network.Gitit.ContentTransformer,
                     Network.Gitit.Types, Network.Gitit.Framework,
                     Network.Gitit.Initialize, Network.Gitit.Config,
                     Network.Gitit.Layout, Network.Gitit.Authentication,
                     Network.Gitit.Authentication.Github,
                     Network.Gitit.Util, Network.Gitit.Server
                     Network.Gitit.Cache, Network.Gitit.State,
                     Paths_gitit, Network.Gitit.Export,
                     Network.Gitit.Handlers,
                     Network.Gitit.Plugins, Network.Gitit.Rpxnow,
                     Network.Gitit.Page, Network.Gitit.Feed,
                     Network.Gitit.Compat.Except
  build-depends:     base >= 3 && < 5,
                     filepath,
                     safe,
                     parsec,
                     pretty,
                     xhtml,
                     containers,
                     process,
                     filepath,
                     directory,
                     mtl,
                     old-time,
                     pandoc >= 1.12.4 && < 1.17,
                     pandoc-types >= 1.12.3 && < 1.17,
                     highlighting-kate >= 0.5.0.1 && < 0.7,
                     bytestring,
                     text,
                     random,
                     utf8-string >= 0.3 && < 1.1,
                     SHA > 1 && < 1.7,
                     HTTP >= 4000.0 && < 4000.4,
                     HStringTemplate >= 0.6 && < 0.9,
                     old-locale >= 1,
                     time >= 1.1 && < 1.7,
                     recaptcha >= 0.1,
                     filestore >= 0.6 && < 0.7,
                     zlib >= 0.5 && < 0.7,
                     url >= 2.1 && < 2.2,
                     happstack-server >= 7.0 && < 7.5,
                     base64-bytestring >= 0.1 && < 1.1,
                     xml >= 1.3.5,
                     hslogger >= 1 && < 1.3,
                     ConfigFile >= 1 && < 1.2,
                     feed >= 0.3.6 && < 0.4,
                     xss-sanitize >= 0.3 && < 0.4,
                     tagsoup >= 0.13 && < 0.14,
                     blaze-html >= 0.4 && < 0.9,
                     json >= 0.4 && < 0.10,
                     uri >= 0.1 && < 0.2,
                     split,
                     hoauth2 >= 0.4.2 && < 0.6,
                     http-conduit >= 2.1.4 && < 2.2,
                     http-client-tls >= 0.2.2 && < 0.3,
                     aeson >= 0.7 && < 0.11,
                     uuid >= 1.3 && < 1.4
  if impl(ghc >= 6.10)
    build-depends:   base >= 4, syb
  if flag(network-uri)
    build-depends:   network-uri >= 2.6 && < 2.7, network >= 2.6
  else
    build-depends:   network >= 2 && < 2.6
  if flag(plugins)
    exposed-modules: Network.Gitit.Interface
    build-depends:   ghc, ghc-paths
    cpp-options:     -D_PLUGINS
  extensions:        CPP
  if impl(ghc >= 6.12)
    ghc-options:     -Wall -fno-warn-unused-do-bind
  else
    ghc-options:     -Wall
  ghc-prof-options:  -fprof-auto-exported -rtsopts

Executable           gitit
  hs-source-dirs:    .
  main-is:           gitit.hs
  build-depends:     base >=3 && < 5,
                     gitit,
                     mtl,
                     hslogger,
                     bytestring,
                     utf8-string,
                     directory
  if flag(network-uri)
    build-depends:   network-uri >= 2.6 && < 2.7, network >= 2.6
  else
    build-depends:   network >= 2 && < 2.6
  extensions:        CPP
  if impl(ghc >= 6.12)
    ghc-options:     -Wall -threaded -fno-warn-unused-do-bind
  else
    ghc-options:     -Wall -threaded
  ghc-prof-options:  -fprof-auto-exported -rtsopts

Executable           expireGititCache
  hs-source-dirs:    .
  main-is:           expireGititCache.hs
  build-depends:     base >=3 && < 5, HTTP, url, filepath
  if flag(network-uri)
    build-depends:   network-uri >= 2.6 && < 2.7, network >= 2.6
  else
    build-depends:   network >= 2 && < 2.6
  if impl(ghc >= 6.10)
    build-depends:   base >= 4, syb
  ghc-options:       -Wall

